--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
-    "foca": "^0.1.0",
+    "foca": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/redux-logger": "^3.0.9",
