--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "foca": "^0.1.4",
+    "foca-axios-enhancer": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
