--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
-    "foca": "0.2.3",
+    "foca": "^0.2.3",
     "foca-axios-enhancer": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -23,6 +23,7 @@
     "@types/redux-logger": "^3.0.9",
     "prettier": "^2.4.1",
     "redux-logger": "^3.0.6",
+    "sleep-promise": "^9.1.0",
     "typescript": "^4.5.2",
     "vite-react": "^0.0.41"
   }
