--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "foca": "^0.3.0",
     "foca-axios-enhancer": "^0.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sleep-promise": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
@@ -23,7 +24,6 @@
     "@types/redux-logger": "^3.0.9",
     "prettier": "^2.4.1",
     "redux-logger": "^3.0.6",
-    "sleep-promise": "^9.1.0",
     "typescript": "^4.5.2",
     "vite-react": "^0.0.41"
   }
