--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "foca-example-todo-list",
-  "repository": "git@github.com:foca-js/foca-example-todo-list.git",
+  "name": "foca-demos",
+  "repository": "git@github.com:foca-js/foca-demos.git",
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "antd": "^4.17.1",
     "axios": "^0.24.0",
     "foca": "^0.3.0",
-    "foca-axios-enhancer": "^0.3.0",
+    "foca-axios": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sleep-promise": "^9.1.0"
