--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^4.20.3",
-    "axios": "^0.27.2",
-    "foca": "^0.11.4",
-    "foca-axios": "^1.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@ant-design/icons": "4.7.0",
+    "antd": "4.20.3",
+    "axios": "^1.1.3",
+    "foca": "^1.2.0",
+    "foca-axios": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sleep-promise": "^9.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/redux-logger": "^3.0.9",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "redux-logger": "^3.0.6",
-    "typescript": "^4.6.4",
-    "vite-react": "^0.4.0"
+    "typescript": "^4.8.4",
+    "vite-react": "^0.7.1"
   }
 }
