--- a/package.json
+++ b/package.json
@@ -7,24 +7,28 @@
     "start": "vite serve",
     "build": "vite build"
   },
+  "volta": {
+    "node": "18.12.1",
+    "pnpm": "7.18.2"
+  },
   "dependencies": {
-    "@ant-design/icons": "4.7.0",
-    "antd": "4.20.3",
-    "axios": "^1.1.3",
-    "foca": "^1.2.0",
+    "@ant-design/icons": "4.8.0",
+    "antd": "5.0.7",
+    "axios": "~1.1.3",
+    "foca": "^1.3.0",
     "foca-axios": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sleep-promise": "^9.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/redux-logger": "^3.0.9",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.1",
     "redux-logger": "^3.0.6",
-    "typescript": "^4.8.4",
-    "vite-react": "^0.7.1"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.1",
+    "vite-react": "^2.2.0"
   }
 }
