--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "vite serve",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "volta": {
     "node": "18.12.1",
@@ -25,10 +26,12 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/redux-logger": "^3.0.9",
+    "@vitest/coverage-c8": "^0.26.2",
     "prettier": "^2.8.1",
     "redux-logger": "^3.0.6",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
-    "vite-react": "^2.2.0"
+    "vite-react": "^2.2.0",
+    "vitest": "^0.26.2"
   }
 }
